Implement password rest feature

--- a/src/components/ForgotPassword/ForgotPassword.scss
+++ b/src/components/ForgotPassword/ForgotPassword.scss
@@ -73,6 +73,7 @@
             color: $primary-bg-color;
             font-weight: 700;
             font-size: 1.05rem;
+            cursor: pointer;
 
             &:hover {
                 background-color: $hover-button-color;
@@ -82,16 +83,25 @@
 
     &__footer {
         text-align: center;
-        margin-top: 1.5rem;
-        font-size: 0.9rem;
+        margin-top: 0.5rem;
+        font-size: 0.8rem;
+        font-style: italic;
 
-        a {
-            color: $secondary-bg-color;
-            text-decoration: none;
+        @include tablet-breakpoint {
+            font-size: 1.2rem;
+        }
+    }
 
-            &:hover {
-                text-decoration: underline;
-            }
+    &__login {
+        color: $primary-text-color;
+        cursor: pointer;
+
+        &:visited {
+            color: $primary-text-color;
+        }
+
+        &:hover {
+            font-weight: 700;
         }
     }
 }
