--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -93,6 +93,29 @@
             &:hover {
                 background-color: $hover-button-color;
             }
+        }
     }
+
+    &__forgot-password {
+        // color: $primary-bg-color;
+        // color: $secondary-text-color;
+        // color: $primary-text-color;
+        display: flex;
+        justify-content: center;
+        margin-top: 0.5rem;
+        color: $primary-text-color;
+        font-size: 1rem;
+        
+        @include tablet-breakpoint {
+            font-size: 1.2rem;
+        };
+
+        &:visited {
+            color: $primary-text-color;
+        }
+    
+        &:hover {
+            font-weight: 700;
+        }
     }
 }
